5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1573_2896.log
== TEST (2019-04-01 00:47:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = python

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = python
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:48:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Python

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:48:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Python

# Impressao de saidas
print()
-- EXECUTION TIME:
0.223835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = Python
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:49:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Python

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:49:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Python

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.130931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = Python
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:26:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:26:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.20897
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:26:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:26:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:26:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- EXECUTION TIME:
0.153522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:26:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(var)
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(var)
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:27:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(python))
-- EXECUTION TIME:
0.208267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:27:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- EXECUTION TIME:
0.219275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:28:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.159985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:28:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.204895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:29:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:29:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:29:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:29:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.18726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:29:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.242547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:29:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:29:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input("Python:"))
-- EXECUTION TIME:
0.194256
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:30:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:30:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- EXECUTION TIME:
0.139369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:30:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:  ")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:30:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python:")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:30:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: ")

# Impressao de saidas
print(input(Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:31:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: ")

# Impressao de saidas
print(input(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(nome))
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:31:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: ")

# Impressao de saidas
print(input(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(nome))
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:31:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python: ")

# Impressao de saidas
print(input(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(nome))
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python)
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:33:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python)
-- EXECUTION TIME:
0.203146
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python)
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:33:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite um nome:")

# Impressao de saidas
print(input(python))
-- EXECUTION TIME:
0.153017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(input(python))
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
